--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "confirm-click": "^0.7.0",
     "express": "^4.13.4",
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
