Auth token for users

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
     "confirm-click": "^0.7.0",
+    "crypto-js": "^3.1.6",
     "express": "^4.13.4",
+    "jsonwebtoken": "^7.0.0",
     "node-gyp": "^3.3.1",
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
